--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <h1>Welcome to Hiranmaye's website!</h1>
     <h2>Go ahead and explore the website<h2>
+    <h1>Frontend Changes<h1> 
 </body>
 </html>
