!feat : added an important line

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Welcome to Hiranmaye's website!</h1>
     <h2>Go ahead and explore the website<h2>
     <h1>Frontend Changes<h1> 
+    <h1>Trying to create a conflict by adding an important line at the same spot via github</h1>
 </body>
 </html>
