--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h2>Go ahead and explore the website</h2>
     <h1>Frontend Changes</h1> 
     <h1>Trying to create a conflict by adding an important line at the same spot via github</h1>
+    <h5>Some changes that everyone has to adapt</h5>
 </body>
 </html>
